--- a/ZMGSN_Lab_3_(NF).ipynb
+++ b/ZMGSN_Lab_3_(NF).ipynb
@@ -20,11 +20,11 @@
     "W ramach zadania należy:\n",
     "<ol>\n",
     "<li>Zapoznać się z poniższym eksperymentem z wykorzystaniem modelu NICE (ang. Non-linear Independent Components Estimation)</li>\n",
-    "<li>Dokonać analizy wpływu hiperparametrów eksperymentu, np. kroku uczenia, rozmiaru pakietu (ang. <i>batch size</i>), liczby epok na wyniki modelu NICE</li> (25pkt)\n",
-    "<li>Dokonać modyfikacji architektury modelu NICE w celu zbadania wpływu architektury na wyniki</li> (15pkt)\n",
-    "<li>Dokonać ewaluacji innych wariantów sieci opartych o przepływy normalizacyjne, np. ConvFlow, MAF, IAF itp.</li> (30pkt)\n",
-    "<li>Opracować procedurę ewaluacji jakości działania modelu NICE i innych rozważanych wariantów, uwzględniającą różne metody wizualizacji (np. wykresy, miary, klasy), klasteryzacji, redukcji wymiarów (np. t-SNE)</li>\n",
-    "</ol> (30pkt)\n",
+    "<li>Dokonać analizy wpływu hiperparametrów eksperymentu, np. kroku uczenia, rozmiaru pakietu (ang. <i>batch size</i>), liczby epok na wyniki modelu NICE (25 pkt)</li> \n",
+    "<li>Dokonać modyfikacji architektury modelu NICE w celu zbadania wpływu architektury na wyniki (15 pkt)</li> \n",
+    "<li>Dokonać ewaluacji innych wariantów sieci opartych o przepływy normalizacyjne, np. ConvFlow, MAF, IAF itp. (30 pkt)</li> \n",
+    "<li>Opracować procedurę ewaluacji jakości działania modelu NICE i innych rozważanych wariantów, uwzględniającą różne metody wizualizacji (np. wykresy, miary, klasy), klasteryzacji, redukcji wymiarów (np. t-SNE) (30 pkt)</li>\n",
+    "</ol> \n",
     "\n",
     "Ocenie podlegać będzie jakość wykonania zadania, w tym:\n",
     "<ol>\n",
